# bmidi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: play.rs  test.rs
src/: combined_iterator.rs  errors.rs  lib.rs  note.rs  parser.rs  reader.rs  types.rs
