[package]
name = "bmidi"
version = "0.0.1"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]

license = "LGPL-3.0"

description = "Midi parsing and processing library"
repository = "https://github.com/filmor/bmidi"

readme = "README.md"


[dependencies]
pitch_calc = "0.9.7"

[[example]]
name = "play"

[dev_dependencies]
synth = "0.9.0"
time_calc = "0.10.0"
dsp-chain = "0.9.0"
clap = "*"
